# bumpver

./: LICENSE  README.md  cspell.json  pyproject.toml
bumpver/: __init__.py  __main__.py  cli.py  config.py  scan.py
bumpver/tests/: __init__.py  mock_file_data.py  test_cli.py  test_scan.py  test_tests.py
